--- a/index.html
+++ b/index.html
@@ -124,32 +124,61 @@
               <h1>Skills</h1>
 
               <h4>Digital Marketing</h4>
-                <div class="progress">
+                <div class="progress" data-toggle="tooltip" title="Click for more">
                   <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%;">
-                Strong
+                    <a class="b" data-toggle="collapse" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                      Strong
+                    </a>
+                  </div>
+                </div>
+                <div class="collapse" id="collapseOne">
+                  <div class="card-block">
+                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
                   </div>
                 </div>
 
               <h4>Technical Project Management</h4>
-                <div class="progress">
+                <div class="progress" data-toggle="tooltip" title="Click for more">
                   <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%;">
-                Advanced
+                    <a class="b" data-toggle="collapse" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                      Advanced
+                    </a>
+                  </div>
+                </div>
+                <div class="collapse" id="collapseTwo">
+                  <div class="card-block">
+                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
                   </div>
                 </div>
 
               <h4>Writing</h4>
-                <div class="progress">
+                <div class="progress" data-toggle="tooltip" title="Click for more">
                   <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
-                Excellent
+                    <a class="b" data-toggle="collapse" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                      Excellent
+                    </a>
+                  </div>
+                </div>
+                <div class="collapse" id="collapseThree">
+                  <div class="card-block">
+                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
                   </div>
                 </div>    
 
               <h4>Performing Arts</h4>
-                <div class="progress">
+                <div class="progress" data-toggle="tooltip" title="Click for more">
                   <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%;">
-                  Strong
+                    <a class="b" data-toggle="collapse" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                      Strong
+                    </a>
                   </div>
-                </div>               
+                </div>
+                <div class="collapse" id="collapseFour">
+                  <div class="card-block">
+                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                  </div>
+                </div>
+                </div>         
 
             </div>
           </div>
@@ -278,5 +307,16 @@
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+
+    <script>
+      
+      $('.progress').tooltip( {
+        trigger: 'hover'
+
+      })
+
+    </script>
+
+
   </body>
 </html>
